--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,29 @@
                     </div>
                 </div>
             </div>
+            {% block barra_busqueda %}
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 search">
+                        <form method="get">
+                            <div id="custom-search-input">
+                                <div class="input-group col-md-12">
+                                    <input type="text" class="form-control" placeholder="Buscar ..." name="buscar" value="{{ request.GET.buscar }}">
+                                    <span class="input-group-list">
+                                        <i class="icon icon-search"></i>
+                                        <button type="submit" class="boton btn-success">Buscar</button>
+                                    </span>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>    
+            </div>
+            {% endblock barra_busqueda %}
         </header>
+        
+
+
         <!-- Main Content-->
         <div class="container px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
